--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
     "start": "node src/server.ts"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "@vercel/node": "^5.3.13",
+    "@sendgrid/mail": "^8.1.5",
+    "@vercel/node": "^4.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.11.2"
+    "express-rate-limit": "^6.11.2",
+    "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -22,6 +24,6 @@
     "typescript": "^5.1.6"
   },
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   }
 }
