--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,25 @@
 {
   "name": "dj-services-backend",
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "ts-node src/server.ts",
-    "build": "echo 'Vercel handles compilation'",
-    "start": "node src/server.ts"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
     "@vercel/node": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.11.2",
-    "nodemon": "^3.1.10"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
