--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,20 @@
 {
-  "functions": {
-    "api/*.ts": {
-      "runtime": "@vercel/node@3"
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/server.ts",
+      "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/server.ts"
+    }
+  ],
+  "env": {
+    "SENDGRID_API_KEY": "@sendgrid-api-key",
+    "FROM_EMAIL": "@from-email",
+    "PUBLIC_BASE_URL": "@public-base-url"
   }
 }
