added all major pages to website

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
